intital fall 2024 syllabi updating

--- a/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
+++ b/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
@@ -6,11 +6,12 @@
 
 * Find me on Microsoft Teams, it's available as a Website, Desktop application, Android, and IOS application. To make the best use of it you are encouraged to have it installed on your computer as well as a smartphone.
 ** Access Instructions: Get instructions for installing the latest Office 365 apps on your computer which includes Teams and/or sign on to the Teams web app at office.com with <YourStarID>@go.minnstate.edu and/or sign in to the Microsoft Teams mobile app with <YourStarID>@go.minnstate.edu
+* Once the campus changes the phone system you will be able to send SMS text messages to my office phone number (below). This does not yet work though. You will be alerted once this functionality is working.
 
 *Office and Hours:*
 
-* Online office hours: By appointment only for Spring 2024
-* On campus office hours: By appointment only for Spring 2024
+* Online office hours (email during these times and we can setup a webcam or phone call): Monday 11:00-12:00pm
+* On campus office hours (S121 or S130): M W 3:00-4:50pm 
 * Webcam/phone/in-person meetings also available other times by appointment.
 
 *Phone:*
